--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- CREDIT: website designed and developed by Yishuen Lo -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:900|Roboto:100,100i" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <title>Tribute Page // Jan Gehl</title>
